# i-hate-drones

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
assets/: column.urdf
bee_rl/: arena_elements.py  args.py  enums.py  eyes.py  main.py  obstacles.py  training_engine.py  trajectory.py  utils.py  verify.py
bee_rl/analytics/: trajectory.py  trajectory_frame.py
bee_rl/control/: __init__.py  base_control.py  path_follower.py  pid.py
bee_rl/env/: __init__.py  base_aviary.py  base_rl_aviary.py  ctrl_aviary.py  rl_aviary.py  vel_aviary.py
demo/: example.ipynb  eyes_activation.py  eyes_demo.py  pid_flight.py  rl.py  trajectory_visu.py
tests/unit/: test_training_engine.py
